fix sparks align

--- a/src/containers/Search/SearchResults.module.scss
+++ b/src/containers/Search/SearchResults.module.scss
@@ -4,6 +4,8 @@
 
   .infiniteScroll {
     margin-top: 12px;
+    display: grid;
+    justify-content: center;
   }
 
   @media (width < 768px) {
